<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black">

    <TextView
        android:id="@+id/operation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="end|center_vertical"
        android:maxLines="1"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/display"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:autoSizeTextType="uniform"
        android:gravity="end|center_vertical"
        android:maxLines="1"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textSize="40sp" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:columnCount="4"
        android:rowCount="5"
        android:useDefaultMargins="true"
        android:alignmentMode="alignBounds"
        android:padding="8dp">

        <Button
            android:id="@+id/btnClear"
            style="@style/CalculatorButton"
            android:text="@string/reiniciar"
            android:textColor="#FF5722" />

        <Button
            android:id="@+id/btnPercent"
            style="@style/CalculatorButton"
            android:text="@string/porcentaje"
            android:textColor="#2196F3" />

        <Button
            android:id="@+id/btnBackspace"
            style="@style/CalculatorButton"
            android:text="@string/del"
            android:textColor="#2196F3" />

        <Button
            android:id="@+id/btnDivide"
            style="@style/CalculatorButton"
            android:text="@string/dividir"
            android:textColor="#2196F3" />

        <Button
            android:id="@+id/btn7"
            style="@style/CalculatorButton"
            android:text="@string/siete" />

        <Button
            android:id="@+id/btn8"
            style="@style/CalculatorButton"
            android:text="@string/ocho" />

        <Button
            android:id="@+id/btn9"
            style="@style/CalculatorButton"
            android:text="@string/nueve" />

        <Button
            android:id="@+id/btnMultiply"
            style="@style/CalculatorButton"
            android:text="@string/multiplicar"
            android:textColor="#2196F3" />

        <Button
            android:id="@+id/btn4"
            style="@style/CalculatorButton"
            android:text="@string/cuatro" />

        <Button
            android:id="@+id/btn5"
            style="@style/CalculatorButton"
            android:text="@string/cinco" />

        <Button
            android:id="@+id/btn6"
            style="@style/CalculatorButton"
            android:text="@string/seis" />

        <Button
            android:id="@+id/btnMinus"
            style="@style/CalculatorButton"
            android:text="@string/resta"
            android:textColor="#2196F3" />

        <Button
            android:id="@+id/btn1"
            style="@style/CalculatorButton"
            android:text="@string/uno" />

        <Button
            android:id="@+id/btn2"
            style="@style/CalculatorButton"
            android:text="@string/dos" />

        <Button
            android:id="@+id/btn3"
            style="@style/CalculatorButton"
            android:text="@string/tres" />

        <Button
            android:id="@+id/btnPlus"
            style="@style/CalculatorButton"
            android:text="@string/suma"
            android:textColor="#2196F3" />

        <!-- Fila 4 -->
        <Button
            android:id="@+id/btnSqrt"
            style="@style/CalculatorButton"
            android:text="@string/raiz_cuadrada"
            android:textColor="#2196F3"
            android:textSize="30sp" />


        <Button
            android:id="@+id/btn0"
            style="@style/CalculatorButton"
            android:text="@string/cero" />

        <Button
            android:id="@+id/btnDot"
            style="@style/CalculatorButton"
            android:text="@string/punto" />

        <Button
            android:id="@+id/btnEquals"
            style="@style/CalculatorButton"
            android:background="@drawable/button_blue_circle"
            android:textColor="#FF5722"
            android:text="@string/igual" />

    </GridLayout>
</LinearLayout>